# LocalKoreanTTS

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  MANIFEST.in  Makefile  Makefile.bak  README.md  README.md.bak  check_pyside.py  conftest.py  pyproject.toml  pyproject.toml.bak2  requirements.txt  run_tests.sh  sitecustomize.py
.github/workflows/: ci.yml  ci.yml.bak  ci.yml.gui.bak
localkoreantts/: __init__.py  __init__.py.bak  __init__.py.bak2  __init__.py.bak3
sample/: long_sample.txt  sample.md  sample.txt  sample.txt.bak
src/localkoreantts/: __init__.py  __init__.py.bak  cache.py  cache.py.bak3  cli.py  cli.py.bak  cli.py.bak_concat  pii.py  pii.py.bak  pii.py.bak2  tts.py  tts.py.bak  tts.py.bak_concat  utils.py  utils.py.bak2  utils.py.bak_concat
src/localkoreantts/gui/: __init__.py  app.py  main_window.py  pipeline.py  translator.py
src/localkoreantts/gui/resources/: __init__.py
src/localkoreantts/gui/resources/i18n/: en-US.qm  en-US.ts  ko-KR.qm  ko-KR.ts
src/localkoreantts/gui/resources/icons/: README.md
src/localkoreantts/gui/views/: __init__.py  controls_view.py  editor_view.py  jobs_view.py  log_view.py  settings_dialog.py
src/localkoreantts/gui/workers/: __init__.py  synth_worker.py  synth_worker.py.bak
tests/: conftest.py  test_cache.py  test_cache.py.bak  test_cli.py  test_cli.py.bak  test_cli.py.bak2  test_cli_smoke.py  test_concat.py  test_gui_audio.py  test_gui_logging.py  test_gui_pipeline.py  test_gui_status.py  test_gui_worker.py  test_package.py  test_package.py.bak  test_pii.py  test_tts.py  test_tts.py.bak  test_tts.py.bak2  test_utils.py  test_utils.py.bak  test_utils.py.bak2
tests/gui/: test_gui_imports.py  test_main_window.py  test_pii_log.py  test_worker.py  test_worker.py.bak
